--- a/step2_features.ipynb
+++ b/step2_features.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,12 +14,13 @@
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "from step1_functions import smooth\n",
-    "from scipy.signal import butter, filtfilt"
+    "from scipy.signal import butter, filtfilt\n",
+    "import pycircstat"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,27 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_curvature(v_,acc_):\n",
-    "    v = np.array(v_)\n",
-    "    acc = np.array(acc_)\n",
-    "\n",
-    "    cross = np.cross(v, acc)\n",
-    "    cross_norm = np.linalg.norm(cross, axis =0)\n",
-    "\n",
-    "    norm_v = np.linalg.norm(v, axis=0)\n",
-    "\n",
-    "    curvature = cross_norm/norm_v**3\n",
-    "\n",
-    "    return curvature"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +294,7 @@
     "    \n",
     "    mask_nh, mask_tw = compute_mask_both_tools(subject, i, segment_nh, segment_tw)\n",
     "    \n",
-    "    if ((np.sum(mask_nh)<=10) or np.sum(mask_tw)==10):\n",
+    "    if ((np.sum(mask_nh)<=10) or np.sum(mask_tw)<=10):\n",
     "        BD=np.nan\n",
     "    else: \n",
     "        v_nh_selected = np.array(v_nh).T[mask_nh[1:]] #since with the calculation of the velocity we lose the first value, we take our mask starting from the second value\n",
@@ -356,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2880,6 +2861,263 @@
     "    print(subject)\n",
     "    print(df_metrics)\n",
     "    i=i+1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Test relative phase"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compute_mask_both_tools(subject, i, segment_nh, segment_tw):\n",
+    "    dict_segment_time = full_segments_time[i]\n",
+    "    needle_holder_rec = pd.read_csv(f'Data/Sync_data/S_{subject}_NH_reconstructed.csv')\n",
+    "    tweezers_rec = pd.read_csv(f'Data/Sync_data/S_{subject}_TW_reconstructed.csv')\n",
+    "    ref_nh_time = pd_2_numpy_and_segment(needle_holder_rec, dict_segment_time)[0][0,0]\n",
+    "    ref_tw_time = pd_2_numpy_and_segment(tweezers_rec, dict_segment_time)[0][0,0]\n",
+    "\n",
+    "    delta_t = ref_nh_time - ref_tw_time\n",
+    "    time_nh = segment_nh[:,0]\n",
+    "    time_tw = segment_tw[:,0]\n",
+    "\n",
+    "    mask_time_nh = np.zeros(len(time_nh))\n",
+    "    for index, t in enumerate(time_nh):\n",
+    "        diff = np.abs(t - np.array(time_tw)) <= (delta_t)\n",
+    "        if (np.sum(diff)>0): mask_time_nh[index]=1\n",
+    "\n",
+    "    mask_time_tw = np.zeros(len(time_tw))\n",
+    "    for index, t in enumerate(time_tw):\n",
+    "        diff = np.abs(np.array(time_nh) - t) <= delta_t\n",
+    "        if (np.sum(diff)>0): mask_time_tw[index]=1\n",
+    "    \n",
+    "    return mask_time_nh.astype(int), mask_time_tw.astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "subjects=[1]#,19, 23,7, 24, 26, 10, 13, 16, 17, 20, 27]\n",
+    "i=0\n",
+    "for subject in subjects:\n",
+    "    #select data points corresponding to the main task\n",
+    "    selected_nh,selected_tw = run_step1_per_subject(subject,i)\n",
+    "\n",
+    "    #apply filter to coordinates\n",
+    "    selected_nh['X.1'] = butter_lowpass_filter(selected_nh['X.1'], cutoff=12)\n",
+    "    selected_nh['Y.1'] = butter_lowpass_filter(selected_nh['Y.1'], cutoff=12)\n",
+    "    selected_nh['Z.1'] = butter_lowpass_filter(selected_nh['Z.1'], cutoff=12)\n",
+    "\n",
+    "    selected_tw['X.1'] = butter_lowpass_filter(selected_tw['X.1'], cutoff=12)\n",
+    "    selected_tw['Y.1'] = butter_lowpass_filter(selected_tw['Y.1'], cutoff=12)\n",
+    "    selected_tw['Z.1'] = butter_lowpass_filter(selected_tw['Z.1'], cutoff=12)\n",
+    "\n",
+    "    #cut the time points in stitches\n",
+    "    dict_segment_time = full_segments_time[i]\n",
+    "    list_np_segmented_tw_rec = pd_2_numpy_and_segment(selected_tw, dict_segment_time)\n",
+    "    list_np_segmented_nh_rec = pd_2_numpy_and_segment(selected_nh, dict_segment_time)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_bimanual_dexterity3(subject, i, segment_nh, segment_tw):\n",
+    "\n",
+    "    #v_nh, acc_nh, jerk_nh = compute_v_acc_jerk(segment_nh)\n",
+    "    #v_tw, acc_tw, jerk_tw = compute_v_acc_jerk(segment_tw)\n",
+    "    \n",
+    "    mask_nh, mask_tw = compute_mask_both_tools(subject, i, segment_nh, segment_tw)\n",
+    "    \n",
+    "    if ((np.sum(mask_nh)<=10) or np.sum(mask_tw)<=10):\n",
+    "        BD=np.nan\n",
+    "    else: \n",
+    "        nh_points = segment_nh[mask_nh.astype(bool)]\n",
+    "        tw_points = segment_tw[mask_tw.astype(bool)]\n",
+    "        v_nh, acc_nh, jerk_nh = compute_v_acc_jerk(nh_points)\n",
+    "        v_tw, acc_tw, jerk_tw = compute_v_acc_jerk(tw_points)\n",
+    "        \n",
+    "        v_stitch_nh = np.linalg.norm(v_nh, axis=0)\n",
+    "        v_stitch_tw = np.linalg.norm(v_tw, axis=0)\n",
+    "            \n",
+    "        mean_v_tw = np.nanmean(v_stitch_tw)\n",
+    "        mean_v_nh = np.nanmean(v_stitch_nh)\n",
+    "\n",
+    "        BD = np.sum((v_stitch_nh - mean_v_nh)*(v_stitch_tw - mean_v_tw))/np.sqrt(np.sum((v_stitch_nh - mean_v_nh)**2)*np.sum((v_stitch_tw - mean_v_tw)**2))\n",
+    "    \n",
+    "    return BD"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_bimanual_efficiency3(subject, i, segment_nh, segment_tw): #consider only time of selected moments\n",
+    "    mask_nh, mask_tw = compute_mask_both_tools(subject, i, segment_nh, segment_tw)\n",
+    "    dt = 1/120\n",
+    "    time_nh = segment_nh[mask_nh.astype(bool)][:,0]\n",
+    "    #time_nh = segment_nh[:,0][mask_nh.astype(bool)] #since we have a list we need a boolean mask\n",
+    "    diff_nh = np.diff(time_nh)\n",
+    "    #we don't want to consider the difference of time between 2 points separated by an unselected period\n",
+    "    mask_nh = diff_nh>dt\n",
+    "    diff_nh_ = diff_nh[~mask_nh]\n",
+    "    sum_time_nh = np.sum(diff_nh_)\n",
+    "\n",
+    "    time_whole_segment_nh = segment_nh[:,0]\n",
+    "    diff_whole_segment_nh = np.diff(time_whole_segment_nh)\n",
+    "    mask_whole = diff_whole_segment_nh>dt\n",
+    "    diff_whole = diff_whole_segment_nh[~mask_whole]\n",
+    "    sum_time_whole = np.sum(diff_whole)\n",
+    "\n",
+    "    if (sum_time_nh ==0): #it is due to imprecision in the algorithm, we should in theory not have 0 values\n",
+    "        BE=np.nan\n",
+    "    else: \n",
+    "        BE= sum_time_nh/sum_time_whole #sum time is the same for nh and tw\n",
+    "\n",
+    "    return BE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.46446671273896617\n",
+      "0.3408432270730111\n",
+      "0.26636895402237665\n",
+      "0.15999145573000106\n",
+      "0.16964359206519056\n",
+      "0.17967032967032967\n",
+      "0.19642857142857142\n",
+      "0.17235123367575095\n"
+     ]
+    }
+   ],
+   "source": [
+    "for s in range(8):\n",
+    "    print(get_bimanual_efficiency3(subject, i, list_np_segmented_nh_rec[s], list_np_segmented_tw_rec[s]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-0.005946783878297836\n",
+      "0.06629251280569184\n",
+      "0.06573593297331476\n",
+      "0.010490837613471856\n",
+      "0.021479702674178005\n",
+      "-0.007092199501124161\n",
+      "0.12721471425235775\n",
+      "0.03980067724269241\n"
+     ]
+    }
+   ],
+   "source": [
+    "for s in range (8):\n",
+    "    print(get_bimanual_dexterity3(subject, i, list_np_segmented_nh_rec[s], list_np_segmented_tw_rec[s]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_relative_phase(subject, i, segment_nh, segment_tw):\n",
+    "    mask_nh, mask_tw = compute_mask_both_tools(subject, i, segment_nh, segment_tw)\n",
+    "    \n",
+    "    if ((np.sum(mask_nh)<=10) or np.sum(mask_tw)<=10):\n",
+    "        relative_phase_x=np.nan\n",
+    "        relative_phase_y=np.nan\n",
+    "        return relative_phase_x, relative_phase_y\n",
+    "    else: \n",
+    "        nh_points = segment_nh[mask_nh.astype(bool)]\n",
+    "        tw_points = segment_tw[mask_tw.astype(bool)]\n",
+    "\n",
+    "\n",
+    "        dt = 1/120\n",
+    "        diff_t_x_y_z_nh = np.diff(nh_points, axis = 0)\n",
+    "        mask_step_bigger_dt_nh = (diff_t_x_y_z_nh[:,0]>dt)\n",
+    "        t_x_y_z_nh = diff_t_x_y_z_nh[~mask_step_bigger_dt_nh]\n",
+    "        v_x_y_z_nh = [t_x_y_z_nh[:,1]/t_x_y_z_nh[:,0], t_x_y_z_nh[:,2]/t_x_y_z_nh[:,0], t_x_y_z_nh[:,3]/t_x_y_z_nh[:,0]]\n",
+    "        x_y_z_nh = nh_points[1:,1:3][~mask_step_bigger_dt_nh]\n",
+    "\n",
+    "        diff_t_x_y_z_tw = np.diff(tw_points, axis = 0)\n",
+    "        mask_step_bigger_dt_tw = (diff_t_x_y_z_tw[:,0]>dt)\n",
+    "        t_x_y_z_tw = diff_t_x_y_z_tw[~mask_step_bigger_dt_tw]\n",
+    "        v_x_y_z_tw = [t_x_y_z_tw[:,1]/t_x_y_z_tw[:,0], t_x_y_z_tw[:,2]/t_x_y_z_tw[:,0], t_x_y_z_tw[:,3]/t_x_y_z_tw[:,0]]\n",
+    "        x_y_z_tw = tw_points[1:,1:3][~mask_step_bigger_dt_tw]\n",
+    "\n",
+    "        #print(v_x_y_z_nh)\n",
+    "        phi_nh_x = np.arctan(v_x_y_z_nh[0]/x_y_z_nh[:,0])\n",
+    "        phi_tw_x = np.arctan(v_x_y_z_tw[0]/x_y_z_tw[:,0])\n",
+    "\n",
+    "        relative_phase_x = phi_nh_x - phi_tw_x\n",
+    "\n",
+    "        phi_nh_y = np.arctan(v_x_y_z_nh[1]/x_y_z_nh[:,1])\n",
+    "        phi_tw_y = np.arctan(v_x_y_z_tw[1]/x_y_z_tw[:,1])\n",
+    "\n",
+    "        relative_phase_y = phi_nh_y - phi_tw_y\n",
+    "\n",
+    "        return relative_phase_x, relative_phase_y\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compute_circular_stat(data):\n",
+    "    return pycircstat.mean(data), pycircstat.std(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(6.281127643441595, 0.41429832735564526) (0.0012677647499118089, 0.6326294396401114)\n",
+      "(0.005524808520276553, 0.29578831323827776) (0.007588221637655853, 0.5620762819882056)\n",
+      "(0.0005006897951789773, 0.20384817185822648) (6.269552760393235, 0.45013548681038884)\n",
+      "(6.27649499584724, 0.22191833779086434) (6.266920732681488, 0.5436033011451784)\n",
+      "(0.0064610438277341, 0.2269603977692718) (6.281455944858819, 0.46869995651308477)\n",
+      "(6.275115437423069, 0.25684579521733514) (6.2333252361221225, 0.6676244100486599)\n",
+      "(6.279424620821119, 0.38810863990634026) (0.02965247730466716, 0.7060883164117122)\n",
+      "(0.011169733398364738, 0.3027048631867433) (6.279437741876621, 0.5881069658370923)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for s in range(8):\n",
+    "    print(compute_circular_stat(get_relative_phase(subject, i, list_np_segmented_nh_rec[s], list_np_segmented_tw_rec[s])[0]), compute_circular_stat(get_relative_phase(subject, i, list_np_segmented_nh_rec[s], list_np_segmented_tw_rec[s])[1]))"
    ]
   }
  ],
